--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "commander": "^2.20.0",
     "eslint": "^5.16.0",
     "fs": "^0.0.1-security",
+    "imagemin": "^6.1.0",
+    "imagemin-jpegtran": "^5.0.0",
+    "imagemin-pngquant": "^6.0.0",
     "inquirer": "^6.2.2",
     "jest": "^24.7.1"
   },
